// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellLabel test should not render an empty text 1`] = `
<div>
  <div>
    <svg>
      <text
        class="crossword__cell-text"
        text-anchor="middle"
        x="47.5"
        y="57"
      />
    </svg>
  </div>
</div>
`;

exports[`CellLabel test should render a letter 1`] = `
<div>
  <div>
    <svg>
      <text
        class="crossword__cell-text"
        text-anchor="middle"
        x="47.5"
        y="57"
      >
        a
      </text>
    </svg>
  </div>
</div>
`;
